apps/foundry-vtt-mll/overlays/dev/foundry-vtt-mll_ingressroute_dev.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-mll-ingress
  namespace: foundry-vtt-mll
spec:
  routes:
    - kind: Rule
      match: Host(`dev-night.sakagegaming.com`)
      services:
        - kind: Service
          name: foundry-vtt-mll
          passHostHeader: true
          port: 80
  # tls:
  #   certResolver: letsencrypt
